# data-challenge-kernel-methods

./: .gitignore  apply_other_methods.ipynb  compare_methods.ipynb  dump.ipynb  knn.ipynb  one_layer.ipynb  pyproject.toml  readme.md  setup.py  start.py  svm.ipynb  train_ckn.ipynb  train_ckn.ipynb:Zone.Identifier  utils.ipynb  utils.py
figures/: schema_ckn.png:Zone.Identifier
models/: myckn_f.pkl
src/: CKN.py  __init__.py  kernels.py  kmeans.py  load_data.py  start.py  svm.py  utils.py
src/classifiers/: KFD.py
src/kernelchallenge/: kernels.py  kmeans.py  load_data.py  start.py  utils.py
src/kernelchallenge/classifiers/: KFD.py  svm.py
svm/: __init__.py  svm.ipynb  svm.py
utils/: __init__.py  gauss_conv.py  load_data.py
